# alacritty

./: CHANGELOG.md  CMUX_UI_DESIGN.md  Cargo.toml  README.md
alacritty/src/: cli.rs  control.rs  event.rs  main.rs  window_context.rs
alacritty/src/display/: window.rs
alacritty/src/polling/: ipc.rs
cmux/: Cargo.toml
cmux/src/: cli.rs  clipboard.rs  event.rs  logging.rs  main.rs  message_bar.rs  multiplexer.rs  pane.rs  panic.rs  session.rs  window_context.rs
cmux/src/config/: bell.rs  bindings.rs  color.rs  cursor.rs  debug.rs  font.rs  general.rs  monitor.rs  mouse.rs  scrolling.rs  selection.rs  terminal.rs  ui_config.rs  window.rs
cmux/src/display/: color.rs  content.rs  cursor.rs  damage.rs  hint.rs  meter.rs  mod.rs  ui.rs  window.rs
cmux/src/input/: keyboard.rs  mod.rs
cmux/src/polling/: mod.rs
cmux/src/renderer/: mod.rs  rects.rs
cmux/src/renderer/text/: gles2.rs  glsl3.rs  mod.rs
cmux_config/: Cargo.toml
cmux_config/src/: lib.rs
cmux_config_derive/: Cargo.toml
cmux_config_derive/src/: lib.rs  serde_replace.rs
cmux_config_derive/src/config_deserialize/: de_enum.rs  de_struct.rs
cmux_config_derive/tests/: config.rs
cmux_terminal/: Cargo.toml
cmux_terminal/src/term/: mod.rs
cmux_terminal/tests/: ref.rs
