[package]
name = "cmux_config_derive"
version = "0.1.0-dev"
authors = ["Christian Duerr <contact@christianduerr.com>"]
license = "MIT OR Apache-2.0"
description = "Failure resistant deserialization derive for cmux"
homepage = "https://github.com/brainnotincluded/cmux"
repository = "https://github.com/brainnotincluded/cmux"
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.7"
syn = { version = "2.0.16", features = ["derive", "parsing", "proc-macro", "printing"], default-features = false }

[dev-dependencies.cmux_config]
path = "../cmux_config"
version = "0.1.0-dev"

[dev-dependencies]
log = "0.4.11"
serde = { version = "1.0.117", features = ["derive"] }
toml.workspace = true
